1.8.11.dev0
 * #851: Fix lack of file extraction when using "extract --strip-components all" on a path with a
   leading slash.

1.8.10
 * #656 (beta): Add a "spot" consistency check that compares file counts and contents between your
   source files and the latest archive, ensuring they fall within configured tolerances. This can
   catch problems like incorrect excludes, inadvertent deletes, files changed by malware, etc. See
   the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/deal-with-very-large-backups/#spot-check
 * #779: When "--match-archives *" is used with "check" action, don't skip Borg's orphaned objects
   check.
 * #842: When a command hook exits with a soft failure, ping the log and finish states for any
   configured monitoring hooks.
 * #843: Add documentation link to Loki dashboard for borgmatic:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#loki-hook
 * #847: Fix "--json" error when Borg includes non-JSON warnings in JSON output.
 * #848: SECURITY: Mask the password when logging a MongoDB dump or restore command.
 * Fix handling of the NO_COLOR environment variable to ignore an empty value.
 * Add documentation about backing up containerized databases by configuring borgmatic to exec into
   a container to run a dump command:
   https://torsion.org/borgmatic/docs/how-to/backup-your-databases/#containers

1.8.9
 * #311: Add custom dump/restore command options for MySQL and MariaDB.
 * #811: Add an "access_token" option to the ntfy monitoring hook for authenticating
   without username/password.
 * #827: When the "--json" flag is given, suppress console escape codes so as not to
   interfere with JSON output.
 * #829: Fix "--override" values containing deprecated section headers not actually overriding
   configuration options under deprecated section headers.
 * #835: Add support for the NO_COLOR environment variable. See the documentation for more
   information: