@@ -1,6 +1,7 @@
 1.8.11.dev0
  * #851: Fix lack of file extraction when using "extract --strip-components all" on a path with a
    leading slash.
+ * #854: Fix a traceback when the "data" consistency check is used.
 
 1.8.10
  * #656 (beta): Add a "spot" consistency check that compares file counts and contents between your
